<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfilePage"
    android:background="@color/colorAccent">


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageView
            android:id="@+id/image"
            android:layout_height="300dp"
            android:layout_width="match_parent"
            android:background="@drawable/pro_pict"
            />

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="right"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:layout_alignStart="@+id/image"
            android:textSize="25sp"
            android:typeface="serif"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/namePreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:textColor="@color/white"
            android:layout_below="@+id/hello"
            android:textSize="30sp"
            android:typeface="serif"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/image"
            android:layout_marginTop="-69dp"
            android:background="@drawable/baseline_account_circle_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/image"
            android:layout_marginStart="1dp"
            android:layout_toEndOf="@id/profilePic"
            android:gravity="center"
            android:text="@string/account_details"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:typeface="serif" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:typeface="serif"
        android:textColor="@color/gray"
        android:text="@string/email"/>
    <TextView
        android:id="@+id/emailPreview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:typeface="serif" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:typeface="serif"
        android:text="@string/contact_number"/>
    <TextView
        android:id="@+id/contactNumPreview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:typeface="serif" />

    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:backgroundTint="@color/black"
        android:typeface="serif"
        android:text="@string/sign_out"
        app:cornerRadius="12dp" />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/navigation_menu"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>
</LinearLayout>